# quick_imgui

./: .gitmodules  CMakeLists.txt  README.md
include/quick_imgui/: quick_imgui.hpp
src/: AverageTime.cpp  ImGuiWrapper.cpp  ImGuiWrapper.hpp  quick_imgui.cpp
tests/: CMakeLists.txt  tests.cpp
